--- a/ureport2-core/pom.xml
+++ b/ureport2-core/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>ureport2-core</artifactId>
-	<version>2.2.9</version>
+	<version>2.2.9-r1</version>
 	<parent>
 		<groupId>com.bstek.ureport</groupId>
 		<artifactId>ureport2-parent</artifactId>
@@ -17,7 +17,7 @@
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils-core</artifactId>
 			<version>1.8.3</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4-runtime</artifactId>
@@ -47,22 +47,22 @@
 		    <groupId>org.apache.poi</groupId>
 		    <artifactId>poi-ooxml</artifactId>
 		    <version>3.16</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
 		    <artifactId>poi-scratchpad</artifactId>
 		    <version>3.16</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
 		    <artifactId>ooxml-schemas</artifactId>
 		    <version>1.3</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 		    <groupId>com.google.zxing</groupId>
 		    <artifactId>core</artifactId>
 		    <version>3.3.1</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.apache.velocity</groupId>
 			<artifactId>velocity</artifactId>
@@ -77,7 +77,7 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.5</version>
-		</dependency>	
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
@@ -108,7 +108,7 @@
 	<organization>
 		<name>Bstek</name>
 		<url>http://www.bstek.com</url>
-	</organization>	
+	</organization>
 	<name>UReport2 Core Project</name>
 	<url>https://github.com/youseries/ureport/tree/master/ureport2-core</url>
 </project>
