1.提交公司优化的ureport版本

--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 	<modules>
 		<module>ureport2-core</module>
 		<module>ureport2-parent</module>
-		<module>ureport2-console</module>
-		<module>ureport2-font</module>
+<!--		<module>ureport2-console</module>-->
+<!--		<module>ureport2-font</module>-->
 	</modules>
 
 	<build>
