--- a/ureport2-parent/pom.xml
+++ b/ureport2-parent/pom.xml
@@ -135,51 +135,35 @@
 		        </execution>
 		      </executions>
 		    </plugin>
-		    <plugin>
-		      <groupId>org.apache.maven.plugins</groupId>
-		      <artifactId>maven-javadoc-plugin</artifactId>
-		      <version>2.9.1</version>
-		      <executions>
-		        <execution>
-		          <id>attach-javadocs</id>
-		          <goals>
-		            <goal>jar</goal>
-		          </goals>
-		        </execution>
-		      </executions>
-		    </plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-gpg-plugin</artifactId>
-				<version>1.5</version>
-				<executions>
-					<execution>
-						<id>sign-artifacts</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>sign</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>		    			
+<!--		    <plugin>-->
+<!--		      <groupId>org.apache.maven.plugins</groupId>-->
+<!--		      <artifactId>maven-javadoc-plugin</artifactId>-->
+<!--		      <version>2.9.1</version>-->
+<!--		      <executions>-->
+<!--		        <execution>-->
+<!--		          <id>attach-javadocs</id>-->
+<!--		          <goals>-->
+<!--		            <goal>jar</goal>-->
+<!--		          </goals>-->
+<!--		        </execution>-->
+<!--		      </executions>-->
+<!--		    </plugin>-->
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-gpg-plugin</artifactId>-->
+<!--				<version>1.5</version>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<id>sign-artifacts</id>-->
+<!--						<phase>verify</phase>-->
+<!--						<goals>-->
+<!--							<goal>sign</goal>-->
+<!--						</goals>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>		    			-->
 		</plugins>
 	</build>
 
-	<distributionManagement>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-		<repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-		</repository>
-	</distributionManagement>
-
-	<name>UReport2 Parent Project</name>
-	<url>https://github.com/youseries/ureport/tree/master/ureport2-parent</url>
-	<issueManagement>
-		<url>${jira.browse.url}/VELOCITY</url>
-	</issueManagement>
 	<description>UReport2 Parent Project</description>
 </project>
