--- a/ureport2-core/pom.xml
+++ b/ureport2-core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.bstek.ureport</groupId>
 		<artifactId>ureport2-parent</artifactId>
-		<version>2.0.6</version>
+		<version>2.2.9-r1</version>
 	</parent>
 	<properties>
 		<log4j.version>1.2.17</log4j.version>
