--- a/ureport2-parent/pom.xml
+++ b/ureport2-parent/pom.xml
@@ -3,8 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.bstek.ureport</groupId>
 	<artifactId>ureport2-parent</artifactId>
-	<version>2.0.6</version>
+	<version>2.2.9-r1</version>
 	<packaging>pom</packaging>
+	<parent>
+		<groupId>com.bstek.ureport</groupId>
+		<artifactId>ureport2</artifactId>
+		<version>2.2.9-r1</version>
+	</parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -111,30 +116,30 @@
 			  <artifactId>maven-release-plugin</artifactId>
 			  <version>2.5.3</version>
 			</plugin>			
-			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.6.7</version>
-				<extensions>true</extensions>
-				<configuration>
-					<serverId>ossrh</serverId>
-					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-					<autoReleaseAfterClose>true</autoReleaseAfterClose>
-				</configuration>
-			</plugin>
-			<plugin>
-		      <groupId>org.apache.maven.plugins</groupId>
-		      <artifactId>maven-source-plugin</artifactId>
-		      <version>2.2.1</version>
-		      <executions>
-		        <execution>
-		          <id>attach-sources</id>
-		          <goals>
-		            <goal>jar-no-fork</goal>
-		          </goals>
-		        </execution>
-		      </executions>
-		    </plugin>
+<!--			<plugin>-->
+<!--				<groupId>org.sonatype.plugins</groupId>-->
+<!--				<artifactId>nexus-staging-maven-plugin</artifactId>-->
+<!--				<version>1.6.7</version>-->
+<!--				<extensions>true</extensions>-->
+<!--				<configuration>-->
+<!--					<serverId>ossrh</serverId>-->
+<!--					<nexusUrl>https://oss.sonatype.org/</nexusUrl>-->
+<!--					<autoReleaseAfterClose>true</autoReleaseAfterClose>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+<!--			<plugin>-->
+<!--		      <groupId>org.apache.maven.plugins</groupId>-->
+<!--		      <artifactId>maven-source-plugin</artifactId>-->
+<!--		      <version>2.2.1</version>-->
+<!--		      <executions>-->
+<!--		        <execution>-->
+<!--		          <id>attach-sources</id>-->
+<!--		          <goals>-->
+<!--		            <goal>jar-no-fork</goal>-->
+<!--		          </goals>-->
+<!--		        </execution>-->
+<!--		      </executions>-->
+<!--		    </plugin>-->
 <!--		    <plugin>-->
 <!--		      <groupId>org.apache.maven.plugins</groupId>-->
 <!--		      <artifactId>maven-javadoc-plugin</artifactId>-->
